--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="ChatUI"
       content="Web site created using create-react-app"
     />
+    <script src="https://unpkg.com/@material-ui/core@latest/umd/material-ui.development.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
